# electronics-shop-project

./: pyproject.toml
homework-2/: main.py
src/: item.py
tests/: test_item.py
